--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -29,6 +29,13 @@
                     <span class="dark:text-white"> {{users.length}}</span>
                 </h5>
 
+                <!-- <select [(ngModel)]="usertypes" class="rounded mx-3 !text-sm" name="" id="">
+                    <option value="all">All Users</option>
+                    <option value="admin">Admin Users</option>
+                    <option value="agent">Agents</option>
+                    <option value="user">Pax</option>
+                </select> -->
+
                 <button state="button" (click)="showDialog()"
                     class="flex items-center justify-center flex-shrink-0 px-3 py-2 text-sm font-medium text-gray-900 bg-white border border-gray-200 rounded-lg focus:outline-none hover:bg-gray-100 hover:text-primary-700 focus:z-10 focus:ring-4 focus:ring-gray-200 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">
                     <svg class="w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
