--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,3 +112,7 @@ font-family: 'Nunito Sans', sans-serif !important;
   .invoice-box.rtl table tr td:nth-child(2) {
     text-align: left;
   }
+
+  .p-button-label{
+    margin: 0px 10px;
+}
