--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -29,7 +29,19 @@
                 </div>
                 <span class="text-700 font-semibold ml-auto hidden md:inline"></span>
             </div>
-          
+            <div class="flex flex-nowrap justify-betwee items-center border-b border-gray-300 surface-border rounded p-3 cursor-pointer select-none
+            hover:surface-hover transition-colors transition-duration-150" [ngClass]="{'surface-hover': current == 'prices'}"
+                tabindex="0" (click)="current = 'prices'">
+                <div class="flex items-center">
+    
+                    <div class=" ">
+                        <span class="text-900 font-semibold block">Price Setting</span>
+                        <span
+                            class="block w-full text-600 text-overflow-ellipsis overflow-hidden white-space-nowrap w-10rem text-sm">Manage Prices </span>
+                    </div>
+                </div>
+                <span class="text-700 font-semibold ml-auto hidden md:inline"></span>
+            </div>
         </div>
 
         <div class="lg:w-3/4 w-full p-0">
@@ -40,6 +52,10 @@
             <div *ngIf="current ==  'locations'">
                 
                 <app-locations></app-locations>
+            </div>
+            <div *ngIf="current ==  'prices'">
+                
+                <app-price></app-price>
             </div>
 
         </div>
