--- a/src/app/prices/price.component.html
+++ b/src/app/prices/price.component.html
@@ -61,7 +61,7 @@
                         <th pSortableColumn="price" style="width:20%">Price  <p-sortIcon field="price"></p-sortIcon></th>
                         <th pSortableColumn="price" style="width:20%">Premium Price  <p-sortIcon field="price"></p-sortIcon></th>
                         <th pSortableColumn="price" style="width:20%">Discounted Value  <p-sortIcon field="price"></p-sortIcon></th>
-                   
+                        <th pSortableColumn="price" style="width:20%">Bus  <p-sortIcon field="price"></p-sortIcon></th>
                         <th style="width:40%">Actions</th>
                     </tr>
                 </ng-template>
@@ -72,6 +72,7 @@
                         <td class="' py-2">{{price.price}}</td>
                         <td class="' py-2">{{price.premiumPrice}}</td>
                         <td class="' py-2">{{price.discountedPrice}}</td>
+                        <td class="' py-2">{{price.bus?.title}}</td>
                         <!-- <td class="' py-2">{{price.createdAt | date: 'dd/MM/yyyy'}}</td> -->
                         <td>
 
