--- a/src/app/abookings/abookings.component.html
+++ b/src/app/abookings/abookings.component.html
@@ -644,7 +644,7 @@
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
 
-                            <p class=""> Trip Route: <strong>{{bookingInfo?.trip?.title}}</strong></p>
+                            <p class=""> Trip Route: <strong>{{bookingInfo?.trip?.route?.title}}</strong></p>
                             <p class=""> Trip Date: <strong>{{bookingInfo?.trip?.tripDate}}
                                     {{bookingInfo?.trip?.time}}</strong></p>
 
