--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -661,7 +661,7 @@
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
 
-                            <p class=""> Trip Route: <strong>{{bookingInfo?.trip?.route?.title}}</strong></p>
+                            <p class=""> Trip Route: <strong>{{bookingInfo?.trip?.title}}</strong></p>
                             <p class=""> Trip Date: <strong>{{bookingInfo?.trip?.tripDate}}
                                     {{bookingInfo?.trip?.time}}</strong></p>
 
@@ -683,7 +683,7 @@
                     <td colspan="2">
                         <div class="mb-2 grid grid-cols-2 lg:grid-cols-2">
 
-                            <p class="">Return Trip Route: <strong>{{bookingInfo?.returnTrip?.route?.title}}</strong></p>
+                            <p class="">Return Trip Route: <strong>{{bookingInfo?.returnTrip?.title}}</strong></p>
                             <p class="">Return Trip Date: <strong>{{bookingInfo?.returnTrip.tripDate}}
                                     {{bookingInfo?.returnTrip.time}}</strong>
                             </p>
@@ -712,53 +712,53 @@
                 </tr>
                 <tr class="">
                     <td colspan="2">
-                        <p class="text-xs pt-0.5">1. The bus departs promptly as scheduled provided it is fully booked
+                        <p class="text-xs !text-[10px] pt-0.5">1. The bus departs promptly as scheduled provided it is fully booked
                             else the bus may be delayed to wait for more passengers to enable recovery of high fuel
                             costs. Please endeavor to be at the bus station at least 15 minutes before your bus
                             departure time. Once the bus departs, it cannot be stopped for security reasons and to avoid
                             causing inconveniences to passengers already onboard.
 
                         </p>
-                        <p class="text-xs pt-0.5">
+                        <p class="text-xs !text-[10px] pt-0.5">
                             2. The bus stops at only the designated bus stations for security reasons.
                         </p>
-                        <p class="text-xs pt-0.5">
+                        <p class="text-xs !text-[10px] pt-0.5">
                             3. When you miss a bus (no show), we will issue you a new ticket at a discounted rate of
                             ₦6,000. Fees to reschedule your ticket. If you cancel more than 24 hours to departure, you
                             will pay ₦5,000 for reschedule.
                         </p>
-                        <p class="text-xs pt-0.5">
+                        <p class="text-xs !text-[10px] pt-0.5">
                             4. A rescheduled ticket cannot be rescheduled.
                         </p>
-                        <p class="text-xs pt-0.5">
+                        <p class="text-xs !text-[10px] pt-0.5">
 
                             5. You are entitled to a total luggage allowance of 10kg. Any luggage above 10kg will be
                             charged at N100 per kg to a maximum of 25kg per bag subject to availability of boot space.
                             If you choose to use our cargo service the luggage will be charged at N50 per kg.
                             Oversized/irregular luggage can only be carried with the cargo service.
                         </p>
-                        <p class="text-xs pt-0.5 pb-[5px]">
+                        <p class="text-xs !text-[10px] pt-0.5 pb-[5px]">
                             6. Seats booked for Luggage must be at the full adult fare for the trip. Fragile items such
                             as electronics, laptops and other valuable items are not to be placed in the checked-in
                             luggage but carried as hand luggage.
 
-                        <p class="text-xs pt-0.5">
+                        <p class="text-xs !text-[10px] pt-0.5">
                             7. There is no refund after your ticket is booked. See full terms and conditions of
                             carriage on our website.
 
                         </p>
-                        <p class="text-xs pt-0.5">
+                        <p class="text-xs !text-[10px] pt-0.5">
 
                             8. ⁠We do not transport pets, including dogs, cats or other animals.
                         </p>
 
-                        <p class="text-xs pt-0.5">
+                        <p class="text-xs !text-[10px] pt-0.5">
 
                             9. ⁠All information captured here are subject to terms and conditions.
 
                         </p>
                         <h4 class="py-1">LIABILITY POLICY</h4>
-                        <p class="text-xs pt-0.5">
+                        <p class="text-xs !text-[10px] pt-0.5">
 
                             Except as provided in these conditions, we shall not be liable to you or any third party for
                             any loss, damage, liability, cost or expense suffered by you or any third party as a result
@@ -766,7 +766,7 @@
                             service, or termination of any service.
 
                         </p>
-                        <p class="text-xs pt-0.5">
+                        <p class="text-xs !text-[10px] pt-0.5">
                             Safe Travels</p>
                     </td>
                 </tr>
